--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>sample </title>
+        <meta charset="utf-8">
+        <title>Homework #2 </title>
     </head>
     <body>
-        <p>Hello world</p>
-        <a href = "http://www.bbc.com/ukrainian">My Favoirit</a>
+        <h1>Homework #2</h1> 
+        <br>З нового рядка
+        <hr>Горизонтальна лінія
+        <br> <a href = "http://www.bbc.com/ukrainian">Гіперлінк</a>
+        <br><b>Товстий текст</b>
+        <img src = "https://pp.vk.me/c633125/v633125222/4556d/EQIGANGacT0.jpg"></img>
+        <p>Параграф</p>
+        <p>Теги можна кладувати <i><b>один</i> в одного</p></b>
+        &reg; - синтаксис спецсимволів
+        <br><strong>Важливий елемент+товстий</strong>
+        <br><em>Важливий елемент+курсив</em>
+        <br><small>Маленький шрифт</small>
+        <br><mark>Підсвітка</mark>
+        <br><time>1957-10-04</time> - час (суть не зрозуміла)<p>
+        <wbr>Допускає перенесення рядка, якщо цього потребує ширина сторінки. Допускає перенесення рядка, якщо цього потребує ширина сторінки. Допускає перенесення рядка, якщо цього потребує ширина сторінки. Як працює не зрозуміло. 
+        <br><big>Збільшений шрифт</big>
+        <br><center>Центровка тексту</center>
+        <br> <figure>
+        <p><img src="http://urlnextdoor.com/ai/design-layout/images/sample-png.png" alt="" /></p>
+        <figcaption>Звязування елементів</figcaption>
+        </figure>
+        <video src="http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4"> width="400" height="300">
+        </video>
+    
     </body>
 </html>
