--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <hr>Горизонтальна лінія
         <br> <a href = "http://www.bbc.com/ukrainian">Гіперлінк</a>
         <br><b>Товстий текст</b>
-        <img src = "https://pp.vk.me/c633125/v633125222/4556d/EQIGANGacT0.jpg"></img>
+        <img src = "https://pp.vk.me/c633125/v633125222/4556d/EQIGANGacT0.jpg " alt="моя киця">
         <p>Параграф</p>
         <p>Теги можна кладувати <i><b>один</i> в одного</p></b>
         &reg; - синтаксис спецсимволів
@@ -26,8 +26,9 @@
         <p><img src="http://urlnextdoor.com/ai/design-layout/images/sample-png.png" alt="" /></p>
         <figcaption>Звязування елементів</figcaption>
         </figure>
-        <video src="http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4"> width="400" height="300">
+        <video src = "http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4" width="400" height="300" controls = "controls" type="video/mp4">
         </video>
-    
+        <audio src = "http://orgonster.googlepages.com/RadeSerbedzija-Uzaludjebudim.mp3"controls = "controls"></audio>
+        <canvas id="smlRectangle" height="100" width="200"></canvas>
     </body>
 </html>
