--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ua">
     <head>
         <meta charset="utf-8">
         <title>Homework #2 </title>
@@ -12,7 +12,7 @@
         <br><b>Товстий текст</b>
         <img src = "https://pp.vk.me/c633125/v633125222/4556d/EQIGANGacT0.jpg " alt="моя киця">
         <p>Параграф</p>
-        <p>Теги можна кладувати <i><b>один</i> в одного</p></b>
+        <p>Теги можна cкладувати <i><b>один</i> в одного.</b></p>
         &reg; - синтаксис спецсимволів
         <br><strong>Важливий елемент+товстий</strong>
         <br><em>Важливий елемент+курсив</em>
@@ -26,9 +26,9 @@
         <p><img src="http://urlnextdoor.com/ai/design-layout/images/sample-png.png" alt="" /></p>
         <figcaption>Звязування елементів</figcaption>
         </figure>
-        <video src = "http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4" width="400" height="300" controls = "controls" type="video/mp4">
+        <video src = "http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" width="400" height="300" controls = "controls" type="video/mp4">
         </video>
-        <audio src = "http://orgonster.googlepages.com/RadeSerbedzija-Uzaludjebudim.mp3"controls = "controls"></audio>
-        <canvas id="smlRectangle" height="100" width="200"></canvas>
+        <audio src = "http://orgonster.googlepages.com/RadeSerbedzija-Uzaludjebudim.mp3" controls = "controls"></audio>
+        
     </body>
 </html>
